finishing cart, detail

--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
   <!-- Navbar -->
   <div class="container">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #050606;">
-      <a class="navbar-brand text-warning" href="#">
+      <a class="navbar-brand text-warning" href="index.html">
         <img src="image/logo1.png" width="30px" class="rounded-circle d-inline-block align-top" alt="" loading="lazy" />
         Scave
       </a>
@@ -28,10 +28,10 @@
       </button>
       <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link mr-3" href="#">Home </a>
-          <a class="nav-item nav-link mr-3" href="#">Produk</a>
-          <a class="nav-item nav-link mr-3" href="#">Promo</a>
-          <a class="nav-item nav-link mr-3" href="#">About Us</a>
+          <a class="nav-item nav-link mr-3" href="index.html">Home</a>
+          <a class="nav-item nav-link mr-3" href="produk.html">Produk</a>
+          <a class="nav-item nav-link mr-3" href="produk.html">Promo</a>
+          <a class="nav-item nav-link mr-3" href="aboutUs.html">About Us</a>
           <a class="nav-item nav-link mr-3" href="#">FAQ</a>
           <a href="" class="d-lg-none btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i
               class="fas fa-fw fa-cart-plus"></i>
@@ -40,9 +40,10 @@
         </div>
       </div>
       <div class="d-none d-lg-flex justify-content-end">
-        <a href="" class="btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i class="fas fa-fw fa-cart-plus"></i>
+        <a href="cart.html" class="btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i
+            class="fas fa-fw fa-cart-plus"></i>
           Cart</a>
-        <a href="" class="btn btn-outline-warning rounded-pill px-lg-4 py-lg-2">Login</a>
+        <a href="login.html" class="btn btn-outline-warning rounded-pill px-lg-4 py-lg-2">Login</a>
       </div>
 
     </nav>
@@ -60,85 +61,113 @@
           </nav>
         </div>
       </div>
+    </div>
+  </section>
+  <!-- Main -->
+  <section style="background-color: #050606;">
+    <div class="container pb-5">
       <div class="row cart">
-        <!-- Main Category -->
-        <div class="col-lg-8 col-12" style="margin-top: -50px;">
+        <div class="col-12" style="margin-top: -50px;">
           <div class="row">
             <div class="col">
               <h1 class="text-warning pt-5 text-header">Keranjang Anda</h1>
               <p class="text-scn">Berikut keranjang belanja anda</p>
             </div>
           </div>
-          <div class="row">
-            <table class="table">
-              <thead>
-                <tr class="text-warning">
-                  <th>No</th>
-                  <th>Foto</th>
-                  <th>Barang</th>
-                  <th>Harga</th>
-                  <th>Jumlah</th>
-                  <th>Total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="text-white">
-                  <td>1</td>
-                  <td>
-                    <img src="image/one.jpg" width="50px" alt="">
-                  </td>
-                  <td>Kaos</td>
-                  <td>Rp. 120.000,00</td>
-                  <td>1</td>
-                  <td>Rp. 120.000,00</td>
-                </tr>
-                <tr class="text-white">
-                  <td>1</td>
-                  <td>
-                    <img src="image/one.jpg" width="50px" alt="">
-                  </td>
-                  <td>Kaos</td>
-                  <td>Rp. 120.000,00</td>
-                  <td>1</td>
-                  <td>Rp. 120.000,00</td>
-                </tr>
-                <tr class="text-white">
-                  <td colspan="5"></td>
-                  <td>Rp. 120.000,00</td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="ml-auto">
-              <button class="btn rounded-pill py-1 px-5 text-white mb-5 btn-warning">Bayar</button>
-            </div>
-          </div>
         </div>
-        <!-- Opsi Produk -->
-        <div class="col-lg-4 mt-5 pt-3">
-          <div class="media">
-            <div class="produk-img">
-              <img src="image/one.jpg" width="75px" class="figure-img img-fluid rounded" alt="Produk">
-              <a href="" class="d-flex justify-content-center">
-                <img src="image/detail.png" class="align-self-center" alt="">
-              </a>
+      </div>
+      <!-- Checkout -->
+      <div class="row cart">
+        <div class="col-lg-7 col-12">
+          <table class="table">
+            <thead>
+              <tr class="text-warning">
+                <th>No</th>
+                <th>Foto</th>
+                <th>Barang</th>
+                <th>Harga</th>
+                <th>Jumlah</th>
+                <th>Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="text-white">
+                <td>1</td>
+                <td>
+                  <img src="image/one.jpg" width="50px" alt="">
+                </td>
+                <td>Kaos</td>
+                <td>Rp. 120.000,00</td>
+                <td>1</td>
+                <td>Rp. 120.000,00</td>
+              </tr>
+              <tr class="text-white">
+                <td>1</td>
+                <td>
+                  <img src="image/one.jpg" width="50px" alt="">
+                </td>
+                <td>Kaos</td>
+                <td>Rp. 120.000,00</td>
+                <td>1</td>
+                <td>Rp. 120.000,00</td>
+              </tr>
+              <tr class="text-white">
+                <td colspan="5"></td>
+                <td>Rp. 120.000,00</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-lg-5 col-12">
+          <div class="card text-white" style="background-color: #464646;">
+            <h5 class="card-header">Informasi</h5>
+            <div class="d-flex justify-content-between px-4">
+              <p>ID Transaksi</p>
+              <p>#121312</p>
             </div>
-            <div class="media-body ml-2">
-              <h5><a class="mt-0 text-warning" href="">Kaos Oblong</a></h5>
-              <p class="text-white">Rp. 120.000,00 <sup class="text-danger"><strike>Rp.150.000,00</strike></sup></p>
+            <div class="d-flex justify-content-between px-4">
+              <p>Total</p>
+              <p>$240.000,00</p>
+            </div>
+            <div class="d-flex justify-content-between px-4">
+              <p>Bank Transfers</p>
+              <p>BNI</p>
+            </div>
+            <div class="d-flex justify-content-between px-4">
+              <p>Nomor Rekening </p>
+              <p>425354634523131</p>
+            </div>
+            <div class="d-flex justify-content-between px-4">
+              <p>Nama Penerima</p>
+              <p>Syabrina</p>
             </div>
           </div>
-          <div class="media">
-            <div class="produk-img">
-              <img src="image/one.jpg" width="75px" class="figure-img img-fluid rounded" alt="Produk">
-              <a href="" class="d-flex justify-content-center">
-                <img src="image/detail.png" class="align-self-center" alt="">
-              </a>
+          <a href="#" class="btn btn-warning btn-block"><i class="fas fa-money-check-alt"></i> Bayar</a>
+        </div>
+      </div>
+      <!-- Form -->
+      <div class="row cart">
+        <div class="col-6">
+          <h2 class="text-warning">Informasi Pribadi</h2>
+          <form action="" class="form">
+            <div class="form-group">
+              <label for="name" class="text-secondary">Name</label>
+              <input type="text" id="name" placeholder="Name" class="form-control">
             </div>
-            <div class="media-body ml-2">
-              <h5><a class="mt-0 text-warning" href="">Kaos Oblong</a></h5>
-              <p class="text-white">Rp. 120.000,00 <sup class="text-danger"><strike>Rp.150.000,00</strike></sup></p>
+            <div class="form-group">
+              <label for="email" class="text-secondary">Email</label>
+              <input type="email" id="email" placeholder="youremail@gmail.com" class="form-control">
             </div>
-          </div>
+            <div class="form-group">
+              <label for="no_telp" class="text-secondary">Nomor Telpon</label>
+              <input type="text" id="no_telp" placeholder="082xxxx" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1" class="text-secondary">Alamat</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                placeholder="Your Address"></textarea>
+            </div>
+          </form>
         </div>
       </div>
     </div>
