--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,7 +18,7 @@
   <!-- Navbar -->
   <div class="container">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #050606;">
-      <a class="navbar-brand text-warning" href="#">
+      <a class="navbar-brand text-warning" href="index.html">
         <img src="image/logo1.png" width="30px" class="rounded-circle d-inline-block align-top" alt="" loading="lazy" />
         Scave
       </a>
@@ -28,10 +28,11 @@
       </button>
       <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link mr-3" href="#">Home </a>
-          <a class="nav-item nav-link mr-3" href="#">Produk</a>
-          <a class="nav-item nav-link mr-3" href="#">Promo</a>
-          <a class="nav-item nav-link active mr-3" href="#">About Us</a>
+          <a class="nav-item nav-link mr-3" href="index.html">Home</a>
+          <a class="nav-item nav-link mr-3" href="produk.html">Produk</a>
+          <a class="nav-item nav-link mr-3" href="produk.html">Promo</a>
+          <a class="nav-item nav-link active mr-3" href="aboutUs.html">About Us <span
+              class="sr-only">(current)</span></a>
           <a class="nav-item nav-link mr-3" href="#">FAQ</a>
           <a href="" class="d-lg-none btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i
               class="fas fa-fw fa-cart-plus"></i>
@@ -40,9 +41,10 @@
         </div>
       </div>
       <div class="d-none d-lg-flex justify-content-end">
-        <a href="" class="btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i class="fas fa-fw fa-cart-plus"></i>
+        <a href="cart.html" class="btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i
+            class="fas fa-fw fa-cart-plus"></i>
           Cart</a>
-        <a href="" class="btn btn-outline-warning rounded-pill px-lg-4 py-lg-2">Login</a>
+        <a href="login.html" class="btn btn-outline-warning rounded-pill px-lg-4 py-lg-2">Login</a>
       </div>
 
     </nav>
