menambahkan icon pada index.html

--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col d-flex justify-content-center">
-          <i class="far fa-fw fa-money-bill-alt"></i>
-          Murah Meriah
+        <div class="col-lg-3 col-md-6 col-12">
+          <img src="image/Rectangle 1.png" alt="">
+          <h3 class="text-center text-warning">Murah Meriah</h3>
         </div>
-        <div class="col d-flex justify-content-center">
-          <i class="far fa-fw fa-money-bill-alt"></i>
-          Murah Meriah
+        <div class="col-lg-3 col-md-6 col-12">
+          <img src="image/Rectangle 2.png" alt="">
+          <h3 class="text-center text-warning">24 Jam</h3>
         </div>
-        <div class="col d-flex justify-content-center">
-          <i class="far fa-fw fa-money-bill-alt"></i>
-          Murah Meriah
+        <div class="col-lg-3 col-md-6 col-12">
+          <img src="image/Rectangle 3.png" alt="">
+          <h3 class="text-center text-warning">Terpercaya</h3>
         </div>
-        <div class="col d-flex justify-content-center">
-          <i class="far fa-fw fa-money-bill-alt"></i>
-          Murah Meriah
+        <div class="col-lg-3 col-md-6 col-12">
+          <img src="image/Rectangle 4.png" alt="">
+          <h3 class="text-center text-warning">Ramah Lingkungan</h3>
         </div>
       </div>
     </div>
