--- a/aboutUs.html
+++ b/aboutUs.html
@@ -33,7 +33,7 @@
           <a class="nav-item nav-link mr-3" href="produk.html">Promo</a>
           <a class="nav-item nav-link active mr-3" href="aboutUs.html">About Us <span
               class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link mr-3" href="#">FAQ</a>
+          <a class="nav-item nav-link mr-3" href="faq.html">FAQ</a>
           <a href="" class="d-lg-none btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i
               class="fas fa-fw fa-cart-plus"></i>
             Cart</a>
@@ -70,8 +70,11 @@
               <h1 class="text-warning pt-5 text-header">About Us</h1>
             </div>
           </div>
-          <div class="row">
-
+          <div class="row mt-3">
+            <h3 class="text-subheader">Toko Online</h3>
+            <p class="text-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maiores corporis,
+              numquam aut nihil tenetur
+              eius dolores amet debitis non vero pariatur natus sunt laboriosam, quod impedit quisquam ducimus. Quo.</p>
           </div>
         </div>
 
