--- a/detail.html
+++ b/detail.html
@@ -32,7 +32,7 @@
           <a class="nav-item nav-link mr-3" href="produk.html">Produk</a>
           <a class="nav-item nav-link mr-3" href="produk.html">Promo</a>
           <a class="nav-item nav-link mr-3" href="aboutUs.html">About Us</a>
-          <a class="nav-item nav-link mr-3" href="#">FAQ</a>
+          <a class="nav-item nav-link mr-3" href="faq.html">FAQ</a>
           <a href="" class="d-lg-none btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i
               class="fas fa-fw fa-cart-plus"></i>
             Cart</a>
@@ -112,9 +112,13 @@
                     <span class="text-white">Rp. 120.000,00 </span><sup class="text-danger"><strike>Rp.
                         150.000,00</strike></sup>
                   </p>
+                  <form action="cart.html">
+                    <input type="number" name="jumlah" id="jumlah" min="1" max="10" value="1" style="width: 40px;">
                 </div>
               </div>
-              <a href="#" class="btn btn-warning btn-block"><i class="fas fa-cart-arrow-down"></i> Add to cart</a>
+              <a href="cart.html" class="btn btn-warning btn-block"><i class="fas fa-cart-arrow-down"></i> Add to
+                cart</a>
+              </form>
             </div>
           </div>
         </div>
