--- a/produk.html
+++ b/produk.html
@@ -32,7 +32,7 @@
           <a class="nav-item nav-link active mr-3" href="produk.html">Produk</a>
           <a class="nav-item nav-link mr-3" href="produk.html">Promo</a>
           <a class="nav-item nav-link mr-3" href="aboutUs.html">About Us</a>
-          <a class="nav-item nav-link mr-3" href="#">FAQ</a>
+          <a class="nav-item nav-link mr-3" href="faq.html">FAQ</a>
           <a href="" class="d-lg-none btn rounded-pill px-lg-4 py-lg-2 mr-lg-2 text-warning"><i
               class="fas fa-fw fa-cart-plus"></i>
             Cart</a>
